Change the heading

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1>Welcome to Feature Creeper and the Creeps</h1> 
+<h1>Welcome to the website of Feature Creeper and the Creeps</h1> 
 <p></p>
 </body>
 </html>
