--- a/location.html
+++ b/location.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<button onclick="getLocation()">Try It</button>
+<button onload="getLocation()"></button>
 
 <p id="demo"></p>
 
