--- a/location.html
+++ b/location.html
@@ -11,9 +11,8 @@
     p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
   </style>
 </head>
-<body>
+<body onLoad="getLocation()">
 
-<button onload="getLocation()"></button>
 
 <p id="demo"></p>
 
