--- a/about.html
+++ b/about.html
@@ -62,15 +62,15 @@
 
 <div class="component-example component-example-fullbleed">
         <nav class="bar bar-tab">
-          <a class="tab-item active" href="#">
+          <a class="tab-item active" href="index.html">
             <span class="icon icon-home"></span>
             <span class="tab-label">Home</span>
           </a>
-          <a class="tab-item" href="#">
+           <a class="tab-item" href="about.html">
             <span class="icon icon-star-filled"></span>
             <span class="tab-label">About</span>
           </a>
-          <a class="tab-item" href="#">
+          <a class="tab-item" href="feedback.html">
             <span class="icon icon-gear"></span>
             <span class="tab-label">Feedback</span>
           </a>
