--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <div class="content-padded">
 
           <h1>I want a park with:</h1>
-          <div><img src="img/picnic.png" style="margin-right:10px; width="156px" height="156px;"><img src="img/toilets.png" style="margin-right:10px; width="156px" height="156px""><img src="img/bbq.png" width="156px" height="156px;"></div>
-          <div><img src="img/lighting.png" style="margin-right:10px; width="156px" height="156px;""><img src="img/drinking_fountain.png" style="margin-right:10px; width="156px" height="156px;""><img src="img/accessable.png" width="156px" height="156px;"></div>
-          <div><img src="img/footpath.png" style="margin-right:10px; width="156px" height="156px;""><img src="img/pirate_ship.png" style="margin-right:10px; width="156px" height="156px;""><img src="img/basketball.png" width="156px" height="156px;"></div>
+          <div><img src="img/picnic.png" style="margin-right:17px; width="106px" height="106px;"><img src="img/toilets.png" style="margin-right:17px; width="106px" height="106px"><img src="img/bbq.png" width="106px" height="106px;"></div>
+          <div><img src="img/lighting.png" style="margin-right:17px; width="106px" height="106px;""><img src="img/drinking_fountain.png" style="margin-right:17px; width="106px" height="106px;""><img src="img/accessable.png" width="106px" height="106px;"></div>
+          <div><img src="img/footpath.png" style="margin-right:17px; width="106px" height="106px;""><img src="img/pirate_ship.png" style="margin-right:17px; width="106px" height="106px;""><img src="img/basketball.png" width="106px" height="106px;"></div>
         </div>
     
       </div>
