--- a/feedback.html
+++ b/feedback.html
@@ -21,7 +21,7 @@
 
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
-      <h1 class="title">Pick-A-Park</h1>
+      <h1 class="title"><img src="img/pick_a_park_logo.png" style="width:156px"></h1>
     </header>
     <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
     <div class="content">
