--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Pick-A-Park</title>
+<link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
 
     <!-- Sets initial viewport load and disables zooming  -->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
@@ -21,7 +22,7 @@
 
     <!-- Make sure all your bars are the first things in your <body> -->
     <header class="bar bar-nav">
-      <h1 class="title">Pick-A-Park</h1>
+      <h1 class="title"><img src="img/pick_a_park_logo.png" style="width:156px"></h1>
     </header>
 
     <!-- Wrap all non-bar HTML in the .content div (this is actually what scrolls) -->
@@ -30,9 +31,26 @@
       <div class="content-padded">
 
           <h1>I want a park with:</h1>
-          <div><img src="img/picnic.png" style="margin-right:17px; width="106px" height="106px;"><img src="img/toilets.png" style="margin-right:17px; width="106px" height="106px"><img src="img/bbq.png" width="106px" height="106px;"></div>
-          <div><img src="img/lighting.png" style="margin-right:17px; width="106px" height="106px;""><img src="img/drinking_fountain.png" style="margin-right:17px; width="106px" height="106px;""><img src="img/accessable.png" width="106px" height="106px;"></div>
-          <div><img src="img/footpath.png" style="margin-right:17px; width="106px" height="106px;""><img src="img/pirate_ship.png" style="margin-right:17px; width="106px" height="106px;""><img src="img/basketball.png" width="106px" height="106px;"></div>
+          <div>
+          <a href="#"><img src="img/picnic.png" style="margin-right:15px;" width="106px;" height="106px;"></a>
+          <a href="#"><img src="img/toilets.png" style="margin-right:15px;" width="106px;" height="106px;"></a>
+          <a href="#"><img src="img/bbq.png" width="106px" height="106px;"></a>
+          </div>
+          <div>
+          <a href="#"><img src="img/lighting.png" style="margin-right:15px;" width="106px" height="106px;"></a>
+          <a href="#"><img src="img/drinking_fountain.png" style="margin-right:15px; width="106px" height="106px;"></a>
+          <a href="#"><img src="img/accessable.png" width="106px" height="106px;"></a>
+          </div>
+          <div>
+          <a href="#"><img src="img/footpath.png" style="margin-right:15px;" width="106px" height="106px;"></a>
+          <a href="#"><img src="img/pirate_ship.png" style="margin-right:15px;" width="106px" height="106px;"></a>
+          <a href="#"><img src="img/basketball.png" width="106px" height="106px;"></a>
+          </div>
+           <div>
+           <a href="#"><img src="img/swing.png" style="margin-right:15px;" width="106px" height="106px;"></a>
+           <a href="#"><img src="img/slide.png" style="margin-right:15px;" width="106px" height="106px;"></a>
+           <a href="#"><img src="img/no_smoking.png" width="106px" height="106px;"></a>
+           </div>
         </div>
     
       </div>
