--- a/location.html
+++ b/location.html
@@ -13,7 +13,7 @@
 </head>
 <body onLoad="getLocation()">
 
-
+<a href="http://maps.apple.com/?ll=-37.81678,144.9645123">Open in Maps</a>
 <p id="demo"></p>
 
 <script>
