--- a/results.html
+++ b/results.html
@@ -30,27 +30,14 @@
       <div class="card">
       <div class="content-padded">
 
-          <h1>I want a park with:</h1>
-          <div>
-          <a href="#"><img src="img/picnic.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="#"><img src="img/toilets.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="results.html"><img src="img/bbq.png" width="80px;" height="80px;"></a>
-          </div>
-          <div>
-          <a href="#"><img src="img/lighting.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="#"><img src="img/drinking_fountain.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="#"><img src="img/accessable.png" width="80px;" height="80px;"></a>
-          </div>
-          <div>
-          <a href="#"><img src="img/footpath.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="#"><img src="img/pirate_ship.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="#"><img src="img/basketball.png" width="80px;" height="80px;"></a>
-          </div>
-           <div>
-           <a href="#"><img src="img/swing.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-           <a href="#"><img src="img/slide.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-           <a href="#"><img src="img/no_smoking.png" width="80px;" height="80px;"></a>
-           </div>
+          <h1>Parks with BBQ near you</h1>
+        
+          <p>The Crescent Reserve Playground<br/><a href="http://maps.apple.com/?ll=-37.79409600 ,144.91961600">Open in Maps</a></p>
+          <p>Kensington Hall Reserve Playground<br/><a href="http://maps.apple.com/?ll=-37.78842300 ,144.92751800">Open in Maps</a></p>
+          <p>Liddy Street Reserve Playground<br/><a href="http://maps.apple.com/?ll=-37.78993400 ,144.92578900">Open in Maps</a></p>
+          <p>Mercantile Parade and Newman Street Playground<br/><a href="http://maps.apple.com/?ll=-37.79550300 ,144.92038600">Open in Maps</a></p>
+          <p>Bayswater Road Reserve Playground <br/><a href="http://maps.apple.com/?ll=-37.79371200 ,144.92350700">Open in Maps</a></p>
+          </ul>
         </div>
     
       </div>
