fun facts included

--- a/results.html
+++ b/results.html
@@ -29,17 +29,17 @@
     <div class="content">
       <div class="card">
       <div class="content-padded">
-
           <h1>Parks with BBQ near you</h1>
-        
           <p>The Crescent Reserve Playground<br/><a href="http://maps.apple.com/?ll=-37.79409600 ,144.91961600">Open in Maps</a></p>
           <p>Kensington Hall Reserve Playground<br/><a href="http://maps.apple.com/?ll=-37.78842300 ,144.92751800">Open in Maps</a></p>
           <p>Liddy Street Reserve Playground<br/><a href="http://maps.apple.com/?ll=-37.78993400 ,144.92578900">Open in Maps</a></p>
           <p>Mercantile Parade and Newman Street Playground<br/><a href="http://maps.apple.com/?ll=-37.79550300 ,144.92038600">Open in Maps</a></p>
           <p>Bayswater Road Reserve Playground <br/><a href="http://maps.apple.com/?ll=-37.79371200 ,144.92350700">Open in Maps</a></p>
-          </ul>
-        </div>
-    
+          <div class="funfact">
+          <h4>Did you knew!!</h4>
+          <p>Smoking was only banned near children’s playgrounds in Victoria in March 2015</p>
+          </div>
+      </div>
       </div>
     </div>
 	<div class="component-example component-example-fullbleed">
