--- a/results.html
+++ b/results.html
@@ -36,7 +36,7 @@
           <p>Mercantile Parade and Newman Street Playground<br/><a href="http://maps.apple.com/?ll=-37.79550300 ,144.92038600">Open in Maps</a></p>
           <p>Bayswater Road Reserve Playground <br/><a href="http://maps.apple.com/?ll=-37.79371200 ,144.92350700">Open in Maps</a></p>
           <div class="funfact">
-          <h4>Did you knew!!</h4>
+          <h4>Did you know?</h4>
           <p>Smoking was only banned near children’s playgrounds in Victoria in March 2015</p>
           </div>
       </div>
