Connect all buttons

--- a/picnic-settings.html
+++ b/picnic-settings.html
@@ -29,20 +29,20 @@
     <div class="content">
       <div class="card">
       <div class="content-padded">
-          <h1>Parks with BBQ near you</h1>
-          <p>The Crescent Reserve Playground<br/><a href="http://maps.apple.com/?ll=-37.79409600 ,144.91961600">Open in Maps</a></p>
-          <p>Kensington Hall Reserve Playground<br/><a href="http://maps.apple.com/?ll=-37.78842300 ,144.92751800">Open in Maps</a></p>
-          <p>Liddy Street Reserve Playground<br/><a href="http://maps.apple.com/?ll=-37.78993400 ,144.92578900">Open in Maps</a></p>
-          <p>Mercantile Parade and Newman Street Playground<br/><a href="http://maps.apple.com/?ll=-37.79550300 ,144.92038600">Open in Maps</a></p>
-          <p>Bayswater Road Reserve Playground <br/><a href="http://maps.apple.com/?ll=-37.79371200 ,144.92350700">Open in Maps</a></p>
+          <h1>Parks with picnic settings near you</h1>
+          <p>Princes Warf<br/><a href="http://maps.apple.com/?ll=-37.81879785,144.96932070">Open in Maps</a></p>
+          <p>Flagstaff Gardens Playground<br/><a href="http://maps.apple.com/?ll=-37.81045400,144.95437700">Open in Maps</a></p>
+          <p>Artplay Playground<br/><a href="http://maps.apple.com/?ll=-37.81830400,144.97157300">Open in Maps</a></p>
+          <p>Riverslide Skate Park<br/><a href="http://maps.apple.com/?ll=-37.82047800,144.97303000">Open in Maps</a></p>
+          <p>Grant Street Reserve Playground<br/><a href="http://maps.apple.com/?ll=-37.82614800,144.96807500">Open in Maps</a></p>
           <div class="funfact">
           <h4>Did you know?</h4>
-          <p>Smoking was only banned near children’s playgrounds in Victoria in March 2015</p>
+          <p>Parks Victoria looks after 4 million hectares of public land. In that space you could almost fit all of Switzerland!</p>
           </div>
       </div>
       </div>
     </div>
-	<div class="component-example component-example-fullbleed">
+  <div class="component-example component-example-fullbleed">
         <nav class="bar bar-tab">
           <a class="tab-item active" href="index.html">
             <span class="icon icon-home"></span>
