--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
 
           <h1>I want a park with:</h1>
           <div>
-          <a href="#"><img src="img/picnic.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="#"><img src="img/toilets.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="results.html"><img src="img/bbq.png" width="80px;" height="80px;"></a>
+          <a href="picnic-settings.html"><img src="img/picnic.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
+          <a href="toilets.html"><img src="img/toilets.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
+          <a href="barbeques.html"><img src="img/bbq.png" width="80px;" height="80px;"></a>
           </div>
           <div>
-          <a href="#"><img src="img/lighting.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="#"><img src="img/drinking_fountain.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="#"><img src="img/accessable.png" width="80px;" height="80px;"></a>
+          <a href="public-lighting.html"><img src="img/lighting.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
+          <a href="drinking-fountains.html"><img src="img/drinking_fountain.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
+          <a href="disability-access.html"><img src="img/accessable.png" width="80px;" height="80px;"></a>
           </div>
           <div>
-          <a href="#"><img src="img/footpath.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="#"><img src="img/pirate_ship.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-          <a href="#"><img src="img/basketball.png" width="80px;" height="80px;"></a>
+          <a href="footpaths.html"><img src="img/footpath.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
+          <a href="pirateships.html"><img src="img/pirate_ship.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
+          <a href="basketball-courts.html"><img src="img/basketball.png" width="80px;" height="80px;"></a>
           </div>
            <div>
-           <a href="#"><img src="img/swing.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-           <a href="#"><img src="img/slide.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
-           <a href="#"><img src="img/no_smoking.png" width="80px;" height="80px;"></a>
+           <a href="swings.html"><img src="img/swing.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
+           <a href="slides.html"><img src="img/slide.png" style="margin-right:5px;" width="80px;" height="80px;"></a>
+           <a href="no-smoking-areas.html"><img src="img/no_smoking.png" width="80px;" height="80px;"></a>
            </div>
         </div>
     
