--- a/swings.html
+++ b/swings.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Pick-A-Park</title>
-<link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
+<link rel="apple-touch-icon" href="img/custom_icon.png">
 
     <!-- Sets initial viewport load and disables zooming  -->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
